--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "firebase-admin": "^13.0.1",
     "firebase-functions": "^6.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
