--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
+    "chartjs": "^0.3.24",
     "cors": "^2.8.5",
     "firebase-admin": "^13.0.1",
     "firebase-functions": "^6.1.2",
+    "framer-motion": "^12.4.2",
     "react": "^18.3.1",
+    "react-chartjs": "^1.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.5",
     "styled-components": "^6.1.13",
     "yarn": "^1.22.22"
   },
