--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.4.7",
     "chartjs": "^0.3.24",
     "cors": "^2.8.5",
+    "dompurify": "^3.2.4",
     "firebase-admin": "^13.0.1",
     "firebase-functions": "^6.1.2",
     "framer-motion": "^12.4.2",
