--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.121.5",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "chartjs": "^0.3.24",
@@ -22,7 +23,10 @@
     "react-chartjs": "^1.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
+    "react-particles-js": "^3.6.0",
     "react-router-dom": "^7.1.5",
+    "react-spring": "^9.7.5",
     "styled-components": "^6.1.13",
     "yarn": "^1.22.22"
   },
