--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-three/drei": "^9.121.5",
+    "@react-three/fiber": "^8.17.14",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "chartjs": "^0.3.24",
@@ -18,7 +19,7 @@
     "dompurify": "^3.2.4",
     "firebase-admin": "^13.0.1",
     "firebase-functions": "^6.1.2",
-    "framer-motion": "^12.4.2",
+    "framer-motion": "^12.4.3",
     "react": "^18.3.1",
     "react-chartjs": "^1.2.0",
     "react-chartjs-2": "^5.3.0",
