--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "firebase-admin": "^13.0.1",
     "firebase-functions": "^6.1.2",
     "framer-motion": "^12.4.3",
+    "jspdf": "^2.5.2",
     "react": "^18.3.1",
     "react-chartjs": "^1.2.0",
     "react-chartjs-2": "^5.3.0",
